name:                phash
version:             0.0.0.0
synopsis:            Haskell bindings to pHash, the open source perceptual hash library
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:  Data.PHash
  exposed-modules:  Data.PHash.Image
  exposed-modules:  Data.PHash.Types
  build-depends:    base >= 4.6 && < 4.7
  build-depends:    process
  hs-source-dirs:   src
  default-language: Haskell2010
  extra-libraries:  pthread
  extra-libraries:  pHash

Test-Suite spec
  Type:            exitcode-stdio-1.0
  Main-Is:         Test.hs
  Hs-Source-Dirs:  src, test
  extra-libraries: pthread
  extra-libraries: pHash
  build-depends:   base >= 4.6 && < 4.7
  build-depends:   tasty >= 0.7 && < 1.0
  build-depends:   tasty-smallcheck >= 0.2 && < 1.0
  build-depends:   tasty-hunit >= 0.4.1 && < 1.0
  build-depends:   HUnit >= 1.2.5.2 && < 2.0
  build-depends:   smallcheck
