name:                phash
version:             0.0.1
synopsis:            Haskell bindings to pHash, the open source perceptual hash library
description:         See http://www.phash.org/ for more info. Note that you
                     must have libphash installed on your system to use this
                     library. Check your system library.
license:             MIT
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           2014 Michael Xavier
category:            Data
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

library
  exposed-modules:  Data.PHash
  exposed-modules:  Data.PHash.Image
  exposed-modules:  Data.PHash.Types
  build-depends:    base >= 4.6 && < 4.7
  hs-source-dirs:   src
  default-language: Haskell2010
  extra-libraries:  pHash

Test-Suite spec
  type:            exitcode-stdio-1.0
  main-is:         Test.hs
  hs-source-dirs:  src, test
  extra-libraries: pthread
  extra-libraries: pHash
  build-depends:   base >= 4.6 && < 4.7
  build-depends:   tasty >= 0.7 && < 1.0
  build-depends:   tasty-smallcheck >= 0.2 && < 1.0
  build-depends:   tasty-hunit >= 0.4.1 && < 1.0
  build-depends:   HUnit >= 1.2.5.2 && < 2.0
  build-depends:   smallcheck
